added new responsibility
added new responsibility

--- a/Personaldetails.html
+++ b/Personaldetails.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Details</title>
+    <title>My Personal Details</title>
 </head>
 
 <body>
@@ -37,6 +37,8 @@
         <li>JavaScript</li>
 
         <li>React</li>
+        
+        <li>Angular</li>
     </ul>
     <hr>
 
