add shortcut icons
add shortcut icons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link rel="shortcut icon" href="assets/Vaishnavi Dhame.png" type="image/png">
   </head>
   <body>
     <header>
@@ -47,7 +48,7 @@
 
     <!-- main section -->
 
-    <iframe src="" width="1100" height="550"> </iframe>
+    <iframe src="Personaldetails.html" width="1100" height="550"> </iframe>
 
     <!-- Footer section  -->
 
