design  new branch

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Navigation section  -->
 
     <nav>
-      <a href="home.html">HOME</a> &nbsp;&nbsp; &nbsp; &nbsp;
+      <a href="home.html" target="myframe">HOME</a> &nbsp;&nbsp; &nbsp; &nbsp;
 
       <a href="">TECH STACK</a> &nbsp;&nbsp;&nbsp; &nbsp;
 
@@ -48,7 +48,7 @@
 
     <!-- main section -->
 
-    <iframe src="Personaldetails.html" width="1100" height="550"> </iframe>
+    <iframe src="Personaldetails.html" width="1100" height="550" name="myframe"> </iframe>
 
     <!-- Footer section  -->
 
